[gd_scene load_steps=6 format=2]

[ext_resource path="res://tempSplashPage.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/DeathScreen.gd" type="Script" id=2]
[ext_resource path="res://BUTTONS/1.png" type="Texture" id=3]
[ext_resource path="res://BUTTONS/3.png" type="Texture" id=4]
[ext_resource path="res://BUTTONS/2.png" type="Texture" id=5]

[node name="DeathScreen" type="Node2D"]
scale = Vector2( 1e-05, 1e-05 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 64 )
scale = Vector2( 1.17333, 1.48148 )
texture = ExtResource( 1 )

[node name="SHARE" type="Button" parent="."]
margin_left = -80.0
margin_top = -32.0
margin_right = 6887.0
margin_bottom = 3430.0
rect_scale = Vector2( 0.025, 0.025 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RETRY" type="Button" parent="."]
margin_left = -80.0
margin_top = 80.0
margin_right = 6883.0
margin_bottom = 3542.0
rect_scale = Vector2( 0.025, 0.025 )
text = "RETRY"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MENU" type="Button" parent="."]
margin_left = -80.0
margin_top = 192.0
margin_right = 6885.0
margin_bottom = 3654.0
rect_scale = Vector2( 0.025, 0.025 )
text = "MENU"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="RichTextLabel" parent="."]
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = -24.0
bbcode_enabled = true
bbcode_text = "[center]SCOOOOOOOOORE"
text = "SCOOOOOOOOORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YOU DIED" type="RichTextLabel" parent="."]
margin_left = -80.0
margin_top = -160.0
margin_right = 88.0
margin_bottom = -120.0
bbcode_enabled = true
bbcode_text = "[center]YOU DIED!"
text = "YOU DIED!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="SHARE" to="." method="_on_SHARE_button_down"]
[connection signal="button_down" from="RETRY" to="." method="_on_RETRY_button_down"]
[connection signal="button_down" from="MENU" to="." method="_on_MENU_button_down"]
